syntax = "proto3";

package ibc.applications.atomic_swap.v1;

option go_package = "github.com/sideprotocol/ibcswap/v6/modules/apps/100-atomic-swap/types";

import "gogoproto/gogo.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "ibc/applications/atomic_swap/v1/swap.proto";
import "google/api/annotations.proto";

// Query provides defines the gRPC querier service.
service Query {

  // Params queries all parameters of the ibc-transfer module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/ibc/apps/atomicswap/v1/params";
  }

  // EscrowAddress returns the escrow address for a particular port and channel id.
  rpc EscrowAddress(QueryEscrowAddressRequest) returns (QueryEscrowAddressResponse) {
    option (google.api.http).get = "/ibc/apps/atomicswap/v1/channels/{channel_id}/ports/{port_id}/escrow_address";
  }

  rpc GetAllOrders(QueryOrdersRequest) returns (QueryOrdersResponse) {
    option (google.api.http).get = "/ibc/apps/atomicswap/v1/orders";
  }

  rpc GetAllOrdersByType(QueryOrdersByRequest) returns (QueryOrdersResponse) {
    option (google.api.http).get = "/ibc/apps/atomicswap/v1/orders/type";
  }

  rpc GetSubmittedOrders(QuerySubmittedOrdersRequest) returns (QueryOrdersResponse) {
    option (google.api.http).get = "/ibc/apps/atomicswap/v1/orders/submitted";
  }

  rpc GetTookOrders(QueryTookOrdersRequest) returns (QueryOrdersResponse) {
    option (google.api.http).get = "/ibc/apps/atomicswap/v1/orders/accepted";
  }

  rpc GetPrivateOrders(QueryPrivateOrdersRequest) returns (QueryOrdersResponse) {
    option (google.api.http).get = "/ibc/apps/atomicswap/v1/orders/private";
  }
}

message QueryOrdersRequest {}

message QueryOrdersResponse {
    repeated Order orders = 1;
}

enum OrderType {
  BuyToSell = 0;
  SellToBuy = 1;
}

message QueryOrdersByRequest {
  OrderType order_type = 1;
}

// submitted orders
message QuerySubmittedOrdersRequest {
  string makerAddress = 1; 
}

message QueryTookOrdersRequest {
  string takerAddress = 1; 
}

message QueryPrivateOrdersRequest {
  string desireAddress = 1; 
}





// QueryParamsRequest is the request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is the response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params defines the parameters of the module.
  ibc.applications.atomic_swap.v1.Params params = 1;
}

// QueryEscrowAddressRequest is the request type for the EscrowAddress RPC method.
message QueryEscrowAddressRequest {
  // unique port identifier
  string port_id = 1;
  // unique channel identifier
  string channel_id = 2;
}

// QueryEscrowAddressResponse is the response type of the EscrowAddress RPC method.
message QueryEscrowAddressResponse {
  // the escrow account address
  string escrow_address = 1;
}